[package]
name = "thumbor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
axum = "0.7.4"
base64 = "0.21.7"
bytes = "1.5.0"
image = "0.24.9"
lazy_static = "1.4.0"
lru = "0.12.3"
percent-encoding = "2.3.1"
photon-rs = "0.3.2"
prost = "0.12.3"
reqwest = "0.11.24"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
tower = { version = "0.4.13", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.5.2", features = ["add-extension", "compression-full", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
prost-build = "0.12.3"
